# chunk-json-lite

./: .gitignore  Cargo.toml  README.md
misc/: movies-10.csv  movies-10.json
src/: main.rs
